# ZK-Device-Trust-mask

./: Overview. md  Update Dockerfile
.github/workflows/: Codeql.yml  Update ci.yml
daemon/: Cargo.toml
daemon/src/: main.rs
programs/device_trust/: Cargo.toml
programs/device_trust/src/: lib.rs
risk_engine/: Cargo.toml
risk_engine/src/: lib.rs  scorer.rs  signals.rs
sdk/es/: device-trust.js
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  proof.ts  types.rs
sdk/typescript/: Update package.json
sdk/typescript/src/: Update index.ts  client.ts  wasm-bridge.ts
sdk/typescript/src/mobile/: DeviceTrustModule.ts
sdk/wasm/: Cargo.toml
sdk/wasm/src/: lib.rs
