daemon/Cargo.toml

```toml
[package]
name = "device-trust-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
risk-engine = { path = "../risk_engine" }
sdk-rust = { path = "../sdk/rust" }
ark-groth16 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
```
