sdk/wasm/Cargo.toml

```toml
[package]
name = "device-trust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sdk-rust = { path = "../rust", features = ["wasm"], default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
```
